[tool.poetry]
name = "datascience"
version = "0.1.0"
description = "Analytics for algorinfo"
authors = ["nuxion <nuxion@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "<=1.2.5"
graphviz = "^0.16"
jupyterlab = "^3.0.16"
spacy = "^3.0.6"
gensim = "^4.0.1"
streamz = "^0.6.2"
papermill = "^2.3.3"
dask = "^2021.6.2"
bokeh = "^2.3.2"
jupyter-bokeh = "^3.0.2"
scikit-learn = "^0.24.2"
opencv-python = "^4.5.2"
psycopg2-binary = "^2.9.1"
beautifulsoup4 = "^4.9.3"
seaborn = "^0.11.1"
boto3 = "^1.17.104"
dask-labextension = "^5.0.2"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
